Done, finally done, aeeee

--- a/Text/diploma.bib
+++ b/Text/diploma.bib
@@ -371,4 +371,97 @@
 	volume=34,
 	number=8,
 	pages="711--726"
-} 
+}
+
+@article{Euler:1741,
+  title={Solutio problematis ad geometriam situs pertinentis},
+  author={Euler, Leonhard},
+  journal={Commentarii academiae scientiarum Petropolitanae},
+  volume={8},
+  pages={128--140},
+  year={1741}
+}
+
+@book{Weber:1978,
+  title={Economy and society: An outline of interpretive sociology},
+  author={Weber, Max},
+  volume={1},
+  year={1978},
+  publisher={Univ of California Press}
+}
+
+@article{Erlang:1917,
+  title={Solution of some problems in the theory of probabilities of significance in automatic telephone exchanges},
+  author={Erlang, Agner Krarup},
+  journal={Elektrotkeknikeren},
+  volume={13},
+  pages={5--13},
+  year={1917}
+}
+
+@article{Dejori&al:2004,
+  title={Mining functional modules in genetic networks with decomposable graphical models},
+  author={Dejori, Math{\"a}us and Schwaighofer, Anton and Tresp, Volker and Stetter, Martin},
+  journal={Omics: a journal of integrative biology},
+  volume={8},
+  number={2},
+  pages={176--188},
+  year={2004},
+  publisher={Mary Ann Liebert, Inc.}
+}
+
+@article{Kvrivanek&Moravek:1986,
+  title={NP-hard problems in hierarchical-tree clustering},
+  author={K{\v{r}}iv{\'a}nek, Mirko and Mor{\'a}vek, Jaroslav},
+  journal={Acta Informatica},
+  volume={23},
+  number={3},
+  pages={311--323},
+  year={1986},
+  publisher={Springer}
+}
+
+@incollection{Brucker:1978,
+  title={On the complexity of clustering problems},
+  author={Brucker, Peter},
+  booktitle={Optimization and operations research},
+  pages={45--54},
+  year={1978},
+  publisher={Springer}
+}
+
+@article{Граничин:1989,
+  title={Об одной стохастической рекуррентной процедуре при зависимых помехах в наблюдении, использующей на входе пробные возмущения},
+  author={Граничин, Олег Николаевич},
+  journal={Вестник Ленингр. ун-та, сер},
+  volume={1},
+  pages={19--21},
+  year={1989}
+}
+
+@article{Поляк&Цыбаков:1990,
+  title={Оптимальные порядки точности поисковых алгоритмов стохастической оптимизации},
+  author={Борис Теодорович Поляк и Александр Борисович Цыбаков},
+  journal={Проблемы передачи информации},
+  volume={26},
+  number={2},
+  pages={45--53},
+  year={1990},
+  publisher={Российская академия наук, Отделение нанотехнологий и информационных технологий}
+}
+
+@book{Kushner&Yin:2003,
+  title={Stochastic approximation and recursive algorithms and applications},
+  author={Kushner, Harold J and Yin, George},
+  volume={35},
+  year={2003},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{Borkar:2008,
+  title={Stochastic approximation},
+  author={Borkar, Vivek S and others},
+  journal={Cambridge Books},
+  year={2008},
+  publisher={Cambridge University Press}
+}
