--- a/Text/sections/section1.tex
+++ b/Text/sections/section1.tex
@@ -3,9 +3,9 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Определения и обозначения}
+\subsection{Определения и обозначения. Сообщества в графах}
 
-Формально, сложная система может быть представлена с помощью графа. В этой работе будут рассматриваться только невзвешенные неориентированные графы. Неориентированный невзвешенный граф $G = (\mathscr{N}, \mathscr{L})$ состоит из двух множеств --- множества $\mathscr{N} \ne \emptyset$, элементы которого называются \emph{узлами} или \emph{вершинами} графа, и множества $\mathscr{L}$ неупорядоченных пар из множества $\mathscr{N}$, элементы которого называются \emph{рёбрами} или \emph{связями}. Мощности множеств $\mathscr{N}$ и $\mathscr{L}$ равны $N$ и $L$ соответственно.
+Формально сложная сеть может быть представлена с помощью графа. В этой работе будут рассматриваться только невзвешенные неориентированные графы. Неориентированный невзвешенный граф $G = (\mathscr{N}, \mathscr{L})$ состоит из двух множеств --- множества $\mathscr{N} \ne \emptyset$, элементы которого называются \emph{узлами} или \emph{вершинами} графа, и множества $\mathscr{L}$ неупорядоченных пар из множества $\mathscr{N}$, элементы которого называются \emph{рёбрами} или \emph{связями}. Мощности множеств $\mathscr{N}$ и $\mathscr{L}$ равны $N$ и $L$ соответственно.
 
 \emph{Подграфом} называется граф $G' = (\mathscr{N}', \mathscr{L}')$, где $\mathscr{N}' \subset \mathscr{N}$ и $\mathscr{L}' \subset \mathscr{L}$.
 
@@ -13,11 +13,13 @@
 
 \emph{Прогулка} из узла $i$ в узел $j$ --- это последовательность узлов, начинающаяся с узла $i$ и заканчивающаяся узлом $j$. \emph{Путь} --- это прогулка, в которой каждый узел встречается единожды. \emph{Геодезический путь} --- это кратчайший путь, а количество узлов в нём на один больше \emph{геодезического расстояния}.
 
-До того, как в работе будет определено понятие \emph{сообщество}, вводится понятие \emph{разбиение} на сообщества. Пусть $G = (\mathscr{N}, \mathscr{L})$ --- граф, тогда разбиением на сообщества будет называться разбиение множества его вершин $P = \{C_1, \dots, C_K\}$, то есть $\bigcup_{i = 1}^K C_i = \mathscr{N}$ и $C_i \cap C_j = \emptyset \ \forall i \neq j \in 1..K$.
+Пусть $G = (\mathscr{N}, \mathscr{L})$ --- граф, \emph{разбиением на сообщества} будем называть разбиение множества его вершин $P = \{C_1, \dots, C_K\}$, то есть $\bigcup_{i = 1}^K C_i = \mathscr{N}$ и $C_i \cap C_j = \emptyset \ \forall i \neq j \in 1..K$.
 
-Множество сообществ $\{C_1, \dots, C_{K_1}\}$ называется разбиением на сообщества на основе разбиения $\hat{P} = \left\{\hat{C}_1, \dots \hat{C}_{K_2}\right\}$, если $\forall i \in 1..K_2\ \exists j \in 1..K_1: \hat{C}_i \subset C_j$.
+Множество сообществ $P = \{C_1, \dots, C_{K_1}\}$ будем называеть разбиением на сообщества \emph{на основе} разбиения $\widetilde{P} = \left\{\widetilde{C}_1, \dots \widetilde{C}_{K_2}\right\}$, если $\forall i \in 1..K_2\ \exists j \in 1..K_1: \widetilde{C}_i \subset C_j$.
 
-Сообщество --- это такой подграф, чьи узлы плотно связаны, однако структурную сплочённость узлов можно определить по разному. Одно из определений вводит понятие \emph{клик}. Клик --- это максимальный подграф, состоящий из трёх и более вершин, каждая из которых связана с каждой другой вершиной из клика. $n$-клик --- это максимальный подграф, в котором самое большое геодезическое расстояние между любыми двумя вершинами не превосходит $n$. Другое определение гласит, что подграф $G'$ является сообществом, если сумма всех степеней внутри $G'$ больше суммы всех степеней, направленных в остальную часть графа \cite{Wasserman:1994}. Два сообщества называются смежными, если существует ребро, направленное из вершины первого сообщества в вершину второго.
+Сообщество --- это такой подграф, чьи узлы плотно связаны, однако структурную сплочённость узлов можно определить по разному. Одно из определений вводит понятие \emph{клик}. Клик --- это максимальный подграф, состоящий из трёх и более вершин, каждая из которых связана с каждой другой вершиной из клика. $n$-клик --- это максимальный подграф, в котором самое большое геодезическое расстояние между любыми двумя вершинами не превосходит $n$. Сообщество определяют как $n$-клик \cite{Wasserman:1994}. Другое определение гласит, что подграф $G'$ является сообществом, если сумма всех степеней внутри $G'$ больше суммы всех степеней, направленных в остальную часть графа \cite{Wasserman:1994}.
+
+Два сообщества называются \emph{смежными}, если существует ребро, направленное из вершины первого сообщества в вершину второго.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -25,23 +27,26 @@
 \subsection{Модулярность}
 \label{subsec:modularity}
 
-Однако подобными определениями сообществ пользоваться неудобно и их проверка достаточно долгая. В 2004 году была представлена \emph{модулярность} --- целевая функция, оценивающая неслучайность разбиения графа на сообщества \cite{Newman&Girvan:2004}. Допустим, имеется $K$ сообществ, тогда определяется симметричная матрица $\mathbf{e}$ размером $K \times K$. Пусть $e_{ij}$ --- отношение количества рёбер, которые идут из сообщества $i$ в сообщество $j$, к полному количеству рёбер в графе (рёбра $l_{mn}$ и $l_{nm}$ считаются различными, где $m$, $n$ --- узлы). След такой матрицы $\mathrm{Tr} \mathbf{e} = \sum_{i \in 1..K}{e_{ii}}$ показывает отношение рёбер в сети, которые соединяют узлы одного и того же сообщества, и хорошее разбиение на сообщества должно иметь высокое значение следа. Однако если поместить все вершины в одно сообщество --- след примет максимальное возможное значение, притом, что такое разбиение не будет сообщать ничего полезного о графе.
+Однако описанными выше определениями сообществ пользоваться неудобно и их нахождение достаточно долгое с вычислительной точки зрения и NP-сложное \cite{Kvrivanek&Moravek:1986, Brucker:1978}. В 2004 году в \cite{Newman&Girvan:2004} было введено понятие \emph{модулярность} --- целевая функция, оценивающая неслучайность разбиения графа на сообщества.
 
-Поэтому далее определяется вектор $\mathbf{a}$ длины K, элементы которого $a_i = \sum_{j \in 1..K}{e_{ij}}$, который обозначает долю количества рёбер, идущих к узлам, принадлежащим сообществу $i$, к полному количеству рёбер в графе. Если в графе рёбра проходят между вершинами независимо от сообществ --- $e_{ij}$ будет в среднем равно $a_i a_j$, поэтому модулярность можно определить следующим образом:
+Допустим, имеется $K$ сообществ, тогда \emph{нормированная матрица смежности сообществ} $\mathbf{e}$ определяется как симметричная матрица размером $K \times K$, где элементы $e_{ij}$ равны отношению количества рёбер, которые идут из сообщества $i$ в сообщество $j$, к полному количеству рёбер в графе (рёбра $l_{mn}$ и $l_{nm}$ считаются различными, где $m$, $n$ --- узлы). След этой матрицы $\mathrm{Tr} (\mathbf{e}) = \sum_{i \in 1..K}{e_{ii}}$ показывает отношение рёбер в сети, которые соединяют узлы одного и того же сообщества, к полному количеству рёбер в графе. Хорошее разбиение на сообщества должно иметь высокое значение следа.
+
+Однако если поместить все вершины в одно сообщество --- след примет максимальное возможное значение, притом, что такое разбиение не будет сообщать ничего полезного о графе. Поэтому определяется вектор $\mathbf{a}$ длины $K$ с элементами $a_i = \sum_{j \in 1..K}{e_{ij}}$. Координата вектора $a_i$ является \emph{нормированной степенью сообщества} $i$ и обозначает долю количества рёбер, идущих к узлам, принадлежащим сообществу $i$, к полному количеству рёбер в графе. Если в графе рёбра проходят между вершинами независимо от сообществ --- $e_{ij}$ будет в среднем равно $a_i a_j$, поэтому модулярность можно определить следующим образом \cite{Newman&Girvan:2004}:
 \begin{equation} \label{eq:q1}
 Q(G, P) = \sum_{i \in 1..K}{\left(e_{ii} - a_i^2\right)} = \mathrm{Tr} \mathbf{e} - \|\mathbf{e}^2\|,
 \end{equation}
 где $\|\mathbf{x}\|$ является суммой элементов матрицы $\mathbf{x}$. Если сообщества распределены не лучше, чем в случайном разбиении --- модулярность будет примерно равна 0. Максимальным возможным значением функции будет 1, но на практике единица не достигается.
 
-Было предложено несколько вариаций модулярности \cite{Muff&Rao&Caflisch:2005, Fortunato&Barthelemy:2007}. Так, эквивалентным приведённому выше определению будет
-\begin{equation}
+Было предложено несколько вариаций определений модулярности \cite{Muff&Rao&Caflisch:2005, Fortunato&Barthelemy:2007}. Так, для взвешенных графов существует следующее определение модулярности:
+\begin{equation}\label{eq:modularity-weighted}
 Q(G, P) = \frac{1}{2L} \sum_{x, y \in 1..N} \left(w_{xy} - \frac{s_x s_y}{2L}\right)\ \delta(c_P(x), c_P(y)),
 \end{equation}
-где $L$ --- мощность $\mathscr{L}$, $w_{xy}$ --- вес ребра между вершинами $x$ и $y$, $s_x$ и $s_y$ --- степени вершин $x$ и $y$ соответственно, $\delta$ --- символ Кронекера, а отображение $c_P(\cdot)$ указывает, в каком сообществе разбиения лежит узел графа.
 
-Теперь можно поставить задачу выделения сообществ следующим образом: требуется найти такое разбиение графа, что модулярность примет максимальное значение. Можно заметить, что такая постановка задачи не использует какого-либо определения сообществ, и получившееся разбиение не проверяется на дополнительные свойства, кроме подсчёта модулярности. Однако такая задача всё ещё будет NP-сложной \cite{Brandes&al:2008}.
+Во взвешенных графах каждое ребро $l_{xy}$ имеет характеристику \emph{вес} $w_{xy} \in \mathbb{R}$, в неориентированных графах $w_{xy} = w_{yx}$. В определении \eqref{eq:modularity-weighted} использовались следующие обозначения: $L$ --- мощность $\mathscr{L}$, $w_{xy}$ --- вес ребра между вершинами $x$ и $y$, $s_x$ и $s_y$ --- степени вершин $x$ и $y$ соответственно, $\delta$ --- символ Кронекера, а отображение $c_P(\cdot)$ указывает, в каком сообществе разбиения лежит узел графа. При условии, что все веса равны нулю или единице --- определение \ref{eq:modularity-weighted} эквивалентно определению \eqref{eq:q1}.
 
-Преимущество модулярности состоит в том, что для того, чтобы посчитать, какой выигрыш будет извлечён из объединения двух сообществ, необходимо произвести только одну операцию. В рамках определения \eqref{eq:q1} такой выигрыш будет равен $\Delta Q = 2(e_{ij} - a_i a_j),$ где $i$ и $j$ --- потенциально объединяемые сообщества.
+Теперь можно поставить задачу выделения сообществ следующим образом: \emph{требуется найти} такое разбиение графа, что модулярность примет максимальное значение. Можно заметить, что такая постановка задачи не использует какого-либо определения сообществ, и получившееся разбиение не проверяется на дополнительные свойства, кроме подсчёта модулярности.
+
+Такая задача всё ещё будет NP-сложной \cite{Brandes&al:2008}. Однако преимущество модулярности состоит в том, что для того, чтобы посчитать, какой выигрыш будет извлечён из объединения двух сообществ, необходимо произвести только одну операцию. В рамках определения \eqref{eq:q1} такой выигрыш будет равен $\Delta Q = 2(e_{ij} - a_i a_j),$ где $i$ и $j$ --- потенциально объединяемые сообщества.
 
 Для того, чтобы объединить два сообщества необходимо сделать $O(\min\{n_i, n_j\})$ операций, где $n_i$ и $n_j$ обозначают количество смежных к $i$ и $j$ сообществ. Не умоляя общности, $n_j \leq n_i$, тогда необходимо обновить столбец $i$-ый столбец и $i$-ую строку матрицы $\mathbf{e}$, а так же $i$-ый элемент вектора $\mathbf{a}$: $e_{ik} = e_{ki} = e_{ki} + e_{kj},$ где $k$ --- смежное к $j$ сообщество, и $a_{i} = a_{i} + a_{j}$. При этом сообщество $j$ следует удалить из дальнейшего рассмотрения.
 
@@ -50,13 +55,19 @@ Q(G, P) = \frac{1}{2L} \sum_{x, y \in 1..N} \left(w_{xy} - \frac{s_x s_y}{2L}\ri
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Рандомизированный жадный алгоритм}
+\subsection{Рандомизированный жадный алгоритм (RG)}
 
-Ньюман в 2004 году предложил алгоритм, максимизирующий модулярность \cite{Newman:2004}. Алгоритм начинается с разбиения графа на $N$ сообществ из одной вершины, а затем на каждой итерации просматривает все пары сообществ и соединяет ту пару, которая даст наибольший выигрыш модулярности. Такой алгоритм достаточно долго работает и страдает от несбалансированного объединения сообществ --- сообщества растут с разной скоростью, большие кластеры соединяются со своими небольшими соседями независимо от того, выгодно это глобально или нет \cite{Ovelgoenne&Geyer-Schulz:2012a}.
+Ньюман в 2004 году в \cite{Newman:2004} предложил алгоритм, максимизирующий модулярность \eqref{eq:q1}. Алгоритм начинается с разбиения графа на $K = N$ сообществ из одной вершины, а затем на каждой итерации просматривает все пары сообществ и соединяет ту пару, которая даст наибольший выигрыш модулярности.
 
-Поэтому был предложен рандомизированный жадный алгоритм (Randomized Gree-dy, \emph{RG}) \cite{Ovelgoenne&Geyer-Schulz:2010}, который на каждой итерации рассматривал $k$ случайных сообществ и смежных к ним сообществ, а затем так же соединял пару, дающую наибольший выигрыш. Трудоёмкость такого алгоритма примерно равна $O(kL \ln N)$. И первый алгоритм, и его рандомизированная вариация соединяют сообщества, записывая только номера соединений, до тех пор, пока не останется только одно сообщество, а затем создают разбиение из списка соединений до того момента, когда достигалась максимальная модулярность (так как в результате лучшего соединения модулярность может уменьшиться). 
-\begin{algorithm}[h]
-\setstretch{0.85}
+Такой алгоритм достаточно долго работает и страдает от несбалансированного объединения сообществ --- сообщества растут с разной скоростью, большие кластеры соединяются со своими небольшими соседями независимо от того, выгодно это глобально или нет \cite{Ovelgoenne&Geyer-Schulz:2012a}. Поэтому был предложен рандомизированный жадный алгоритм (Randomized Greedy, \emph{RG}) в \cite{Ovelgoenne&Geyer-Schulz:2010}, который на каждой итерации рассматривал $k$ случайных сообществ и смежных к ним сообществ, а затем так же соединял пару, дающую наибольший выигрыш. Трудоёмкость такого алгоритма примерно равна $O(kL \ln N)$.
+
+И первый алгоритм, и его рандомизированная вариация соединяют сообщества, записывая только номера соединений, до тех пор, пока не останется только одно сообщество, а затем создают разбиение из списка соединений до того момента, когда достигалась максимальная модулярность (так как в результате лучшего соединения модулярность может уменьшиться). 
+
+Далее в работе рандомизированный жадный алгоритм с параметром $k$ будет обозначаться $RG_k$.
+Можно отметить, что таким алгоритмом можно выделять сообщества на основе некоторого начального разбиения, при этом только немного поменяется начальный этап инициализации матрицы $\mathbf{e}$ и вектора $\mathbf{a}$ (как можно увидеть в алгоритме~\ref{alg:RG}).\\
+
+\begin{algorithm}[H]
+\setstretch{1}
 \SetAlgoLined
 \KwIn{Невзвешенный неориентированный граф $G = (\mathscr{N}, \mathscr{L})$, параметр $k$}
 \KwOut{Разбиение на сообщества $P$}
@@ -71,12 +82,8 @@ Q(G, P) = \frac{1}{2L} \sum_{x, y \in 1..N} \left(w_{xy} - \frac{s_x s_y}{2L}\ri
 	$a[i] = \sum_j e[i, j]$\;
 }
 \BlankLine
-\caption{Этап инициализации рандомизированного жадного алгоритма}
-\label{alg:RG-init}
-\end{algorithm}
-
-%\setlength{\algoheightrule}{0.8pt}
-\begin{algorithm}[H]
+% \caption{Этап инициализации рандомизированного жадного алгоритма}
+% \label{alg:RG-init}
 $global\Delta Q \leftarrow 0$\;
 $max\_global\Delta Q \leftarrow -\infty$\;
 \For{$i \in 1..N$}{
@@ -117,15 +124,13 @@ $P \leftarrow $ создать разбиение из $joins\_list[1..best\_ste
 \end{algorithm}
 
 \vspace{0.1cm}
-Далее в работе рандомизированный жадный алгоритм с параметром $k$ будет обозначаться $RG_k$.
-Можно отметить, что таким алгоритмом можно выделять сообщества на основе некоторого начального разбиения, при этом только немного поменяется начальный этап инициализации матрицы $\mathbf{e}$ и вектора $\mathbf{a}$ (как можно увидеть в алгоритме~\ref{alg:RG-init}).
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Схема кластеризации основных групп графа}
+\subsection{Схема кластеризации основных групп графа (CGGC)}
 \label{subsec:ens}
 
-Овельгённе и Гейер-Шульц в 2012 году выиграли конкурс 10th DIMACS Implementation Challenge в категории \emph{кластеризация графа} со схемой кластеризации основных групп графа (Core Groups Graph Cluster, \emph{CGGC}). Схема заключается в том, что сначала $s$ \emph{начальных алгоритмов} разбивают граф на сообщества, и считается, что те вершины, в которых начальные алгоритмы сошлись во мнении, распределены по сообществам правильно, а те, которые остались, распределяет по сообществам \emph{финальный алгоритм} \cite{Ovelgoenne&Geyer-Schulz:2012b}.
+Овельгённе и Гейер-Шульц в 2012 году выиграли конкурс 10th DIMACS Implemen\-tation Challenge в категории \emph{кластеризация графа} со схемой кластеризации основных групп графа (Core Groups Graph Cluster, \emph{CGGC}). Схема заключается в том, что сначала $s$ \emph{начальных алгоритмов} разбивают граф на сообщества, и считается, что те вершины, в которых начальные алгоритмы сошлись во мнении, распределены по сообществам правильно, а те, которые остались, распределяет по сообществам \emph{финальный алгоритм} \cite{Ovelgoenne&Geyer-Schulz:2012b}.
 
 Формализовать это можно следующим образом:
 \begin{enumerate}
@@ -154,8 +159,8 @@ $$v, w \in \mathscr{N}, \exists i \in 1..s :\ c_{P_i}(v) \ne c_{P_i}(w) \Rightar
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Одновременно возмущаемая стохастическая аппроксимация}
-Стохастические аппроксимация была введена Роббинсом и Монро в 1951 году \cite{Robbins&Monro:1951} и затем была использована для решения оптимизационный задач Кифером и Вольфовицем \cite{Kiefer&Wolfowitz:1952}. В \cite{Blum:1954} алгоритм стохастической аппроксимации был расширен до многомерного случая. В $m$-мерном пространстве обычная KW-процедура, основанная на конечно-разностной аппроксимации градиента, использовала $2m$ измерений на каждой итерации (по два измерения на каждую координату градиента). Спалл предложил алгоритм \emph{одновременно возмущаемой стохастической аппроксимации} (\emph{SPSA}) \cite{Spall:1992}, который на каждой итерации использует всего два измерения. Он показал, что \emph{SPSA} алгоритм имеет такую же скорость сходимости, несмотря на то, что в многомерном случае (даже при $m \to \infty$), несмотря на то, что в нём используется заметно меньше измерений \cite{Spall:2005}.
+\subsection[Одновременно возмущаемая стохастическая аппроксимация (SPSA)]{Одновременно возмущаемая\\ стохастическая аппроксимация (SPSA)}
+Стохастическая аппроксимация была введена Роббинсом и Монро в 1951 году \cite{Robbins&Monro:1951} и затем была использована для решения оптимизационный задач Кифером и Вольфовицем \cite{Kiefer&Wolfowitz:1952}. В \cite{Blum:1954} алгоритм стохастической аппроксимации был расширен до многомерного случая. В $m$-мерном пространстве обычная KW-процедура, основанная на конечно-разностной аппроксимации градиента, использовала $2m$ измерений на каждой итерации (по два измерения на каждую координату градиента). Последовательно Граничин \cite{Граничин:1989}, Поляк и Цыбаков \cite{Поляк&Цыбаков:1990} и Спалл \cite{Spall:1992} предложили алгоритм \emph{одновременно возмущаемой стохастической аппроксимации} (\emph{SPSA}), который на каждой итерации использует всего два измерения. Алгоритм \emph{SPSA} имеет такую же скорость сходимости, несмотря на то, что в многомерном случае (даже при $m \to \infty$) в нём используется заметно меньше измерений \cite{Spall:2005}.
 
 Стохастическая аппроксимация первоначально использовалась как инструмент для статистических вычислений и в дальнейшем разрабатывалась в рамках отдельной ветки теории управления. На сегодняшний день стохастическая аппроксимация имеет большое разнообразие применений в таких областях, как адаптивная обработка сигналов, адаптивное выделение ресурсов, адаптивное управление.
 
@@ -164,38 +169,43 @@ $$v, w \in \mathscr{N}, \exists i \in 1..s :\ c_{P_i}(v) \ne c_{P_i}(w) \Rightar
 Общую схему одновременно возмущаемой стохастической аппроксимации можно представить следующим образом:
 
 \begin{enumerate}
-	\item Выбор начальной центральной точки $\hat{\theta}_0 \in \mathbb{R}^m$, счётчик $n \leftarrow 0$, выбор параметров алгоритма $d \in \mathbb{R} \setminus \{0\}$, $\{\alpha_n\} \subset \mathbb{R}^m$
+	\item Выбор начального приближения $\hat{\theta}_0 \in \mathbb{R}^m$, счётчик $n \leftarrow 0$, выбор параметров алгоритма $d \in \mathbb{R} \setminus \{0\}$, $\{\alpha_n\} \subset \mathbb{R}^m$
 	\item Увеличение счётчика $n \leftarrow n + 1$
-	\item Выбор вектора возмущения $\Delta_n \in \mathbb{R}^m$, чьи координаты независимо генерируются и в среднем дают ноль. Часто для генерации компонент вектора используют распределение Бернулли, дающее $\pm1$ с вероятностью $\frac{1}{2}$ для каждого значения
-	\item Определение новых аргументов функции $\theta_{n}^{-} \leftarrow \hat{\theta}_{n - 1} - d\Delta_{n}$ и $\theta_{n}^{+} \leftarrow \hat{\theta}_{n - 1} + d\Delta_{n}$
+	\item Выбор вектора возмущения $\Delta_n \in \mathbb{R}^m$, чьи координаты независимо генерируются по распределению Бернулли, дающему $\pm1$ с вероятностью $\frac{1}{2}$ для каждого значения
+	\item Определение новых аргументов функционала $\theta_{n}^{-} \leftarrow \hat{\theta}_{n - 1} - d\Delta_{n}$ и $\theta_{n}^{+} \leftarrow \hat{\theta}_{n - 1} + d\Delta_{n}$
 	\item Вычисление значений функционала $y_n^{-} \leftarrow f(\theta_{n}^{-}), y_n^{+} \leftarrow f(\theta_{n}^{+})$
-	\item Вычисление следующей центральной точки
+	\item Вычисление следующей оценки
 	\begin{equation} \label{eq:spsa-central}
-		\hat{\theta}_n \leftarrow \hat{\theta}_{n - 1} - \alpha_n \frac{y_n^{+} - y_n^{-}}{|\theta_{n}^{+} - \theta_{n}^{-}|}
+		\hat{\theta}_n \leftarrow \hat{\theta}_{n - 1} - \alpha_n \Delta_{n} \frac{y_n^{+} - y_n^{-}}{2d}
 	\end{equation}
 	\item Далее происходит либо остановка алгоритма, либо переход на второй пункт
 \end{enumerate}
 
-В \cite{Granichin&Amelina:2015} был представлен метод стохастической аппроксимации с константным размером шага, в таком случае вместо последовательности $\{\alpha_n\}$ используется единственный параметр $\alpha \in \mathbb{R}^m$, и следующая центральная точка вычисляется по следующей формуле: $\hat{\theta}_n \leftarrow \hat{\theta}_{n - 1} - \alpha \frac{y_n^{+} - y_n^{-}}{|\theta_{n}^{+} - \theta_{n}^{-}|}$
+В \cite{Kushner&Yin:2003, Borkar:2008, Granichin&Amelina:2015} рассматривается метод стохастической аппроксимации с постоянным размером шага, в таком случае вместо последовательности $\{\alpha_n\}$ используется единственный параметр $\alpha \in \mathbb{R}^m$, и следующая оценка вычисляется по следующей формуле вместо \eqref{eq:spsa-central}:
+\begin{equation}
+	\hat{\theta}_n \leftarrow \hat{\theta}_{n - 1} - \alpha \Delta \frac{y_n^{+} - y_n^{-}}{2d}
+\end{equation}
+
+Это позволяет эффективно решать проблемы очень плохого начального приближения $\hat{\theta}_0$ и дрейфующей оптимальной точки, когда аргумент, при котором функционал принимает лучшие значения, меняется со временем.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Постановка задачи}
+\subsection{Постановка задачи адаптации параметров алгоритма}
 \label{subsec:task}
 
 Рандомизированный жадный алгоритм имеет один параметр $k$, в то время как схема кластеризации основных групп графа один параметр $s$ и различные начальные и финальные алгоритмы. В случае использования $RG_k$ в качестве начального алгоритма --- \emph{CGGC} можно рассматривать как алгоритм с параметрами $s,\;k$ и некоторым финальным алгоритмом.
 
-Часто алгоритмы на каждых входных данных имеют разные оптимальные параметры, то есть нет одного набора параметров, решающих каждую задачу наилучшим образом. И алгоритм \emph{SPSA} показал хорошие результаты в адаптировании параметров подобных алгоритмов, когда в ходе работы рассматриваемого алгоритма его параметры варьируются, довольно быстро достигая оптимальной точки.
+Часто алгоритмы на разных входных данных имеют разные оптимальные параметры, то есть нет одного набора параметров, решающих каждую задачу наилучшим образом. Алгоритм \emph{SPSA} показал хорошие результаты в адаптировании параметров подобных алгоритмов, в ходе работы рассматриваемого алгоритма его параметры варьируются, довольно быстро достигая оптимальной точки.
 
-В данной работе будет рассматриваться применение алгоритма \emph{SPSA} к двум алгоритмам выделения сообществ в графах, а так же сравнение модулярностей этих алгоритмов и полученных с помощью \emph{SPSA} модификаций.
+В выпускной квалификационной работе будет рассматриваться применение алгоритма \emph{SPSA} к двум алгоритмам выделения сообществ в графах, а так же сравнение модулярностей этих алгоритмов и полученных с помощью \emph{SPSA} модификаций.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Тестовые графы}
 
-В качестве тестовых графов были взяты графы, используемые для оценки алгоритмов на конкурсе 10th DIMACS Implementation Challenge. Далее представлены используемые графы с кратким описанием, в порядке увеличения количества узлов.
+В качестве тестовых графов были взяты графы, используемые для оценки алгоритмов на конкурсе 10th DIMACS Implementation Challenge. Далее представлены используемые графы с кратким описанием, в порядке увеличения количества узлов. Графы можно найти по адресу \url{http://www.cc.gatech.edu/dimacs10/archive/clustering.shtml}
 
 \begin{itemize}
 	
@@ -220,6 +230,6 @@ $$v, w \in \mathscr{N}, \exists i \in 1..s :\ c_{P_i}(v) \ne c_{P_i}(w) \Rightar
 
 \end{itemize}
 
-Кроме того, некоторые тесты используют автоматически сгенерированные графы с заранее известным количеством сообществ. Такой граф имеет четыре параметра --- количество узлов $N$, количество сообществ $K$ (все сообщества одинаковых размеров), вероятность появления ребра между узлами одного сообщества $p_1$ и вероятность появления ребра между вершинами разных сообществ $p_2$. Преимущество автоматически сгенерированных графов заключается в проверке работы алгоритма на разных по размеру графах с разными по плотности сообществами. Так же из построения известны реальные сообщества. Однако графы, построенные по реальным системам могут сильно отличаться от подобных графов.
+При разработке алгоритмов использовались синтетические наборы данных, которые представляют собой автоматически сгенерированные графы с заранее известным количеством сообществ. Такой граф имеет четыре параметра --- количество узлов $N$, количество сообществ $K$ (все сообщества одинаковых размеров), вероятность появления ребра между узлами одного сообщества $p_1$ и вероятность появления ребра между вершинами разных сообществ $p_2$. Преимущество автоматически сгенерированных графов заключается в проверке работы алгоритма на разных по размеру графах с разными по плотности сообществами. Так же для тестирования важно, что по построению известны реальные сообщества. Однако графы, построенные по реальным системам, могут сильно отличаться от подобных графов.
 
 Так, далее в работе используется автоматически сгенерированный граф под названием \emph{auto40}, со следующими параметрами: $N = 40,000,\ K = 40,\ p_1 = 0.1,\ p_2 = 5\cdot 10^{-4}$.
