--- a/Text/sections/section2.I.tex
+++ b/Text/sections/section2.I.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Адаптивный рандомизированный жадный алгоритм}
+\section[Адаптивный рандомизированный жадный алгоритм]{Адаптивный рандомизированный\\ жадный алгоритм}
 \label{sec:ARG}
 
 
@@ -8,7 +8,7 @@
 
 \subsection{Применимость алгоритма SPSA}
 
-Для того, чтобы алгоритм SPSA был применим --- необходимо иметь выпуклую функцию качества, которую необходимо минимизировать. В большинстве случаев модулярность результатов работы \emph{RG} на разных графах с разными значениями параметра $k$ будет выглядеть следующим образом:
+Применимость \emph{SPSA} обоснована теоретически для выпуклой усреднённой функции качества. В большинстве случаев модулярность результатов работы \emph{RG} на разных графах с разными значениями параметра $k$ будет выглядеть следующим образом:
 
 \begin{figure}[H]
 	\begin{tikzpicture}
@@ -211,13 +211,13 @@
 	\caption{Зависимость времени $t$ в миллисекундах от $k$ для результатов работы $RG_k$ на графах \emph{polbooks} и \emph{\celegans}}
 \end{figure}
 
-Основываясь на этих данных вместо времени можно использовать значение $k$. Максимальное значение модулярности, которое может быть достигнуто на графе очень сильно отличается, поэтому нет смысла использовать абсолютное значение модулярности, но имеет смысл использовать относительные значения. При вычислении центральной точки \eqref{eq:spsa-central} в алгоритме одновременно возмущаемой стохастической аппроксимации использутся только разность функций качества. Поэтому если использовать в функции качества логарифмы от модулярности --- разность функций укажет, во сколько раз модулярность изменилась.
+Основываясь на этих данных вместо времени можно использовать значение $k$. Максимальное значение модулярности, которое может быть достигнуто на графе очень сильно отличается, поэтому нет смысла использовать абсолютное значение модулярности, но имеет смысл использовать относительные значения. При вычислении следующей оценки \eqref{eq:spsa-central} в алгоритме одновременно возмущаемой стохастической аппроксимации использутся только разность функций качества. Поэтому если использовать в функции качества логарифмы от модулярности --- разность функций укажет, во сколько раз модулярность изменилась.
 
 Так же функция качества должна принимать минимум, а не максимум, поэтому первой версией подобной функции может быть $f(Q) = -\alpha \ln Q,\;\alpha > 0$. Для того, чтобы принимать во внимание время работы, разумно добавить логарифм от $k$: 
 \begin{equation} \label{eq:arg-f}
 f(Q, k) = -\alpha (\ln Q - \beta \ln k),\;\alpha > 0, \beta \ge 0
 \end{equation}
-Коэффициент $\beta$ в таком случае можно рассматривать в следующем виде $\beta = \frac{\ln \gamma}{\ln 2}$, где коэффициент $\gamma$ указывает, во сколько раз необходимо увеличиться модулярности для того, чтобы покрыть увеличение времени (то есть $k$) вдвое. Если время не имеет значение коэффициент $\gamma$ принимает значение 1, а следовательно коэффициент $\beta$ принимает значение 0. Коэффициент $\alpha$ же играет роль размера шага при выборе следующей центральной точки.
+Коэффициент $\beta$ в таком случае можно рассматривать в следующем виде $\beta = \frac{\ln \gamma}{\ln 2}$, где коэффициент $\gamma$ указывает, во сколько раз необходимо увеличиться модулярности для того, чтобы покрыть увеличение времени (то есть $k$) вдвое. Если время не имеет значение коэффициент $\gamma$ принимает значение 1, а следовательно коэффициент $\beta$ принимает значение 0. Коэффициент $\alpha$ же играет роль размера шага при выборе следующей оценки.
 
 \begin{figure}[H]
 	\begin{tikzpicture}
@@ -294,18 +294,18 @@ f(Q, k) = -\alpha (\ln Q - \beta \ln k),\;\alpha > 0, \beta \ge 0
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Адаптивный алгоритм}
+\subsection{Адаптивный алгоритм (ARG)}
 
 Для использования алгоритма \emph{SPSA} в рандомизированном жадном алгоритме предлагается разбить действие алгоритма на шаги длиной в $\sigma$ итераций. В течении каждого шага используется одно значение $k$. После каждого шага можно считать прирост модулярности, но вместо этого имеет смысл считать медиану прироста модулярности за $\sigma$ итераций --- так как алгоритм рандомизированный, время от времени будут появляться очень хорошие соединения сообществ, которые будут портить функцию качества, такой большой прирост может появиться даже при очень плохом $k$. В таком случае схема алгоритма будет выглядеть следующим образом:
 
 \begin{enumerate}
-	\item Выбор начальной центральной точки $\hat{k}_0 \in \mathbb{N}$, счётчик $n \leftarrow 0$, выбор размера возбуждения $d \in \mathbb{N}$, коэффициентов функции качества $\alpha, \beta \in \mathbb{R},\; \alpha > 0,\;\beta \ge 0$, и $\sigma \in \mathbb{N}$ --- количество итераций в одном шаге
+	\item Выбор начального приближения точки $\hat{k}_0 \in \mathbb{N}$, счётчик $n \leftarrow 0$, выбор размера возбуждения $d \in \mathbb{N}$, коэффициентов функции качества $\alpha, \beta \in \mathbb{R},\; \alpha > 0,\;\beta \ge 0$, и $\sigma \in \mathbb{N}$ --- количество итераций в одном шаге
 	\item Увеличение счётчика $n \leftarrow n + 1$
 	\item Определение новых аргументов функции $k_{n}^{-} \leftarrow \max\{\hat{k}_{n - 1} - d, 1\}$ и $k_{n}^{+} \leftarrow \hat{k}_{n - 1} + d$
 	\item Выполнение $\sigma$ итераций с параметром $k_{n}^{-}$, вычисление медианы прироста модулярности $\mu_n^{-}$
 	\item Выполнение $\sigma$ итераций с параметром $k_{n}^{+}$, вычисление медианы прироста модулярности $\mu_n^{+}$
 	\item Вычисление функций качества $y_n^{-} \leftarrow -\alpha (\ln \mu_n^{-} - \beta \ln k_n^{-})$, $y_n^{+} \leftarrow -\alpha (\ln \mu_n^{+} - \beta \ln k_n^{+})$
-	\item Вычисление следующей центральной точки
+	\item Вычисление следующей оценки
 	\begin{equation} \label{eq:arg-centre}
 		\hat{k}_n \leftarrow \max\left\{1, \left[\hat{k}_{n - 1} - \frac{y_n^{+} - y_n^{-}}{k_n^{+} - k_n^{-}}\right]\right\}
 	\end{equation}
@@ -319,7 +319,7 @@ f(Q, k) = -\alpha (\ln Q - \beta \ln k),\;\alpha > 0, \beta \ge 0
 
 \subsection{Чувствительность к перепадам функции качества}
 
-Коэффициент $\alpha$ отвечает за то, насколько чувствителен алгоритм будет к перепадам функций качества --- чем больше $\alpha$, тем сильнее будет отличаться новая центральная точка от предыдущей в одной и той же ситуации. На трёх графах были измерены зависимости модулярности от параметра $\alpha$ при $d = 2,\ \sigma = 500,\ \hat{k}_0 = 10,\ \beta = 0$:
+Коэффициент $\alpha$ отвечает за то, насколько чувствителен алгоритм будет к перепадам функций качества --- чем больше $\alpha$, тем сильнее будет отличаться новая оценка от предыдущей в одной и той же ситуации. На трёх графах были измерены зависимости модулярности от параметра $\alpha$ при $d = 2,\ \sigma = 500,\ \hat{k}_0 = 10,\ \beta = 0$:
 
 \begin{figure}[H]
 	\begin{tikzpicture}
