--- a/Text/sections/section3.I.tex
+++ b/Text/sections/section3.I.tex
@@ -17,7 +17,7 @@
 
 Так же, если граф, подающийся на вход, достаточно большой --- в качестве начального алгоритма на нём имеет смысл использовать адаптивный рандомизированный жадный алгоритм.
 
-В таблице \ref{tab:es1-q} сравниваются результаты работы \emph{CGGC} с разными начальными и финальными алгоритмами. В качестве начального алгоритма используюся два рандомизированных жадных алгоритма с параметрами $k = 3$ и $k = 10$ (обозначаются как и выше в работе $RG_k$, со значением параметра $k$ в индексе), и адаптивный рандомизированный жадный алгоритм с параметрами $d = 5,\ f(\mu, k) = -10(\ln \mu - 0.02 \ln k),\ \sigma = 1000,\ \hat{k}_0 = 8$ (обозначается $ARG$). А в качестве финального алгоритма используются только $RG_3$ и $RG_{10}$, так как на рассматриваемых графах промежуточное разбиение состоит из недостаточно большого количества сообществ, чтобы использовать \emph{ARG}.
+В таблицах \ref{tab:es1-q} и \ref{tab:es1-t} сравниваются результаты работы \emph{CGGC} с разными начальными и финальными алгоритмами. В качестве начального алгоритма используюся два рандомизированных жадных алгоритма с параметрами $k = 3$ и $k = 10$ (обозначаются как и выше в работе $RG_k$, со значением параметра $k$ в индексе), и адаптивный рандомизированный жадный алгоритм с параметрами $d = 5,\ f(\mu, k) = -10(\ln \mu - 0.02 \ln k),\ \sigma = 1000,\ \hat{k}_0 = 8$ (обозначается $ARG$). А в качестве финального алгоритма используются только $RG_3$ и $RG_{10}$, так как на рассматриваемых графах промежуточное разбиение состоит из недостаточно большого количества сообществ, чтобы использовать \emph{ARG}.
 
 \emph{CGGC} используется с параметром $s = 10$, начальный алгоритм обозначается как $A_{init}$, а финальный как $A_{final}$. Для повышения точности \emph{CGGC} с разными начальными и финальными алгоритмами запускались на графе \emph{cond-mat-2003} запускались 21 раз, на \emph{caidaRouterLevel} и \emph{auto40} --- три раза.
 
@@ -58,13 +58,13 @@
 Так как адаптивный рандомизированный жадный алгоритм не может работать на графах с маленьким количеством узлов или на разбиениях с маленьким количеством сообществ --- была предложена другая схема адаптивной кластеризации основных групп графа:
 
 \begin{enumerate}
-	\item На вход подаётся граф $G$. Выбор параметров алгоритма: $d \in \mathbb{N}$ --- размер возмущения, $f(Q, k): \mathbb{R} \times \mathbb{N} \rightarrow \mathbb{R}$ --- функция качества, $l \in \mathbb{N}$ --- количество шагов, $r \in (0, 1]$ --- параметр, отвечающий за количество лучших начальных разбиений, учавствующих в создании промежуточного разбиения. И наконец $\hat{k}_0 \in \mathbb{N}$ --- начальная центральная точка. Инициализация счётчика $n \leftarrow 0$и списка начальных разбиений $S \leftarrow \emptyset$
+	\item На вход подаётся граф $G$. Выбор параметров алгоритма: $d \in \mathbb{N}$ --- размер возмущения, $f(Q, k): \mathbb{R} \times \mathbb{N} \rightarrow \mathbb{R}$ --- функция качества, $l \in \mathbb{N}$ --- количество шагов, $r \in (0, 1]$ --- параметр, отвечающий за количество лучших начальных разбиений, учавствующих в создании промежуточного разбиения. И наконец $\hat{k}_0 \in \mathbb{N}$ --- начальное приближение. Инициализация счётчика $n \leftarrow 0$и списка начальных разбиений $S \leftarrow \emptyset$
 	\item Увеличение счётчика $n \leftarrow n + 1$
 	\item \label{item:es-k+} Вычисление следующих параметров рандомизированного жадного алгоритма $k_n^{-} \leftarrow \max\{1, \hat{k}_{n - 1} - d\}$ и $k_n^{+} \leftarrow \hat{k}_{n - 1} + d$
 	\item Выделение сообществ в графе $G$ рандомизированным жадным алгоритмом с параметром $k = k_n^{-}$, результирующее разбиение $P_n^{-}$ записывается в список $S$
 	\item Выделение сообществ в графе $G$ рандомизированным жадным алгоритмом с параметром $k = k_n^{+}$, результирующее разбиение $P_n^{+}$ записывается в список $S$
 	\item Вычисление функций качества $y_n^{-} \leftarrow f(Q_n^{-}, k_n^{-}),\ y_n^{+} \leftarrow f(Q_n^{+}, k_n^{+})$
-	\item Вычисление следующей центральной точка аналогично \eqref{eq:arg-centre}
+	\item Вычисление следующей оценки аналогично \eqref{eq:arg-centre}
 	\begin{equation}\label{eq:aes-centre}
 		\hat{k}_n \leftarrow \max\left\{1, \left[\hat{k}_{n - 1} - \frac{y_n^{+} - y_n^{-}}{k_n^{+} - k_n^{-}}\right]\right\}
 	\end{equation}
@@ -177,7 +177,7 @@
 	\begin{tikzpicture}
 		\begin{axis}[
 		    table/col sep = semicolon,
-		    height = 0.16\paperheight, 
+		    height = 0.15\paperheight, 
 		    width = 0.49\columnwidth,
 		    xlabel = {$n$},
 		    ylabel = {$k^{\pm}_n$},
@@ -193,7 +193,7 @@
 	\begin{tikzpicture}
 		\begin{axis}[
 		    table/col sep = semicolon,
-		    height = 0.16\paperheight, 
+		    height = 0.15\paperheight, 
 		    width = 0.49\columnwidth,
 		    xlabel = {$n$},
 		    ylabel = {$k^{\pm}_n$},
@@ -209,18 +209,18 @@
 	\label{fig:es-alpha-d3}
 \end{figure}
 
-Заметно, как быстро алгоритмы находят близкие к $k_{opt}$ центральные точки $\hat{k}_n$.
+Заметно, как быстро алгоритмы находят близкую к $k_{opt}$ оценку $\hat{k}_n$.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Начальная центральная точка}
+\subsection{Начальное приближение}
 
-Начальная центральная точка $\hat{k}_0$ указывает, рядом с какой точкой будут находиться параметры первых двух запусков рандомизированного жадного алгоритма. Очень большим делать начальную центральную точку не имеет смысла, так как довольно много графов имеет небольшой оптимальный параметр.
+Начальное приближение $\hat{k}_0$ указывает, рядом с какой точкой будут находиться параметры первых двух запусков рандомизированного жадного алгоритма. Очень большим делать начальное приближение не имеет смысла, так как довольно много графов имеет небольшой оптимальный параметр.
 
-Однако, как показывает рисунок \ref{fig:es-k0}, на самом деле модулярность очень слабо зависит от начальной центральной точки. Для получения рисунка \emph{ACGGC} запускалась с параметрами $d = 2,\ f(Q, k) = -1000 \ln Q,\ l = 10,\ r = 1$, в качестве финального алгоритма использовался $RG_{10}$.
+Однако, как показывает рисунок \ref{fig:es-k0}, на самом деле модулярность очень слабо зависит от начального приближени. Для получения рисунка \emph{ACGGC} запускалась с параметрами $d = 2,\ f(Q, k) = -1000 \ln Q,\ l = 10,\ r = 1$, в качестве финального алгоритма использовался $RG_{10}$.
 
-На графе \emph{as-22july06} при увеличении начальной центральной точки модулярность понижалась, однако изменения были достаточно небольшими, а так же на других графах такой зависимости выявлено не было.
+На графе \emph{as-22july06} при увеличении начального приближения модулярность понижалась, однако изменения были достаточно небольшими, а так же на других графах такой зависимости выявлено не было.
 
 \begin{figure}[H]
 	\begin{tikzpicture}
@@ -291,7 +291,7 @@
 		\addplot table [x = {k0}, y={q}]{data/es/k0/netscience_k0.csv};
 		\end{axis}
 	\end{tikzpicture}
-	\caption{Зависимость модулярности от начальной центральной точки $\hat{k}_0$ в работе \emph{ACGGC} на четырёх графах}
+	\caption{Зависимость модулярности от начального приближения $\hat{k}_0$ в работе \emph{ACGGC} на четырёх графах}
 	\label{fig:es-k0}
 \end{figure}
 
@@ -381,7 +381,7 @@
 		\addplot table [x expr = {1 - \thisrowno{0}}, y={q}]{data/es/r-r1/netscience_r1.csv};
 		\end{axis}
 	\end{tikzpicture}
-	\caption{Зависимость модулярности от доли хороших разбиений, учавствующих в создании промежуточного разбиения, в работе \emph{ACGGC} на четырёх графах. Сплошной линией отмечен пропорциональный выбор, а прерывистой --- непропорциональный}		% Изменять при изменении цветовой схемы
+	\caption{Зависимость модулярности от доли хороших разбиений, учавствующих в создании промежуточного разбиения, в работе \emph{ACGGC} на четырёх графах. Сплошной линией отмечен пропорциональный выбор, а прерывистой --- непропорциональный}		%	Синей линией отмечен пропорциональный выбор, а красной --- непропорциональный}
 	\label{fig:es-r}
 \end{figure}
 
@@ -392,7 +392,7 @@
 	\begin{tikzpicture}
 		\begin{axis}[
 		    table/col sep = semicolon,
-		    height = 0.16\paperheight,
+		    height = 0.18\paperheight,
 		    width = 0.43\columnwidth,
 		    xlabel = {$l$},
 		    ylabel = {$t$},
@@ -412,7 +412,7 @@
 	\begin{tikzpicture}
 		\begin{axis}[
 		    table/col sep = semicolon,
-		    height = 0.16\paperheight,
+		    height = 0.18\paperheight,
 		    width = 0.43\columnwidth,
 		    xlabel = {$l$},
 		    ylabel = {$t$},
@@ -435,8 +435,6 @@
 	\caption{Время работы от количества шагов $l$ в работе \emph{ACGGC} на четырёх графах при $r = 0.05$ и $r = 1$}
 	\label{fig:es-l-t}
 \end{figure}
-
-Стоит отметить, что на графах \emph{jazz}, \emph{as-22july06} модулярности при разных $r$ практически не отличались, а также начиная с некоторого $l$ на этих двух графах и на графе \emph{netscience} модулярность не росла. На графе \emph{\celegans} модулярность достигала некоторого оптимального $l$ и затем падала. При этом время работы растёт практически линейно от $l$, как можно увидеть на рисунке \ref{fig:es-l-t}.
 
 \begin{figure}[H]
 	\begin{tikzpicture}
@@ -528,6 +526,9 @@
 	\label{fig:es-l-q}
 \end{figure}
 
+
+Стоит отметить, что на графах \emph{jazz}, \emph{as-22july06} модулярности при разных $r$ практически не отличались, а также начиная с некоторого $l$ на этих двух графах и на графе \emph{netscience} модулярность не росла. На графе \emph{\celegans} модулярность достигала некоторого оптимального $l$ и затем падала. При этом время работы растёт практически линейно от $l$, как можно увидеть на рисунке \ref{fig:es-l-t}.
+
 Таким образом, нет смысла брать большое $l$, повышая время работы, но не гарантируя улучшения получившихся разбиений.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -537,15 +538,13 @@
 
 Одним из способов влиять на время работы является увеличение коэффициента $\beta$ в функции качества $f(Q, k) = -\alpha(\ln Q - \beta \ln k)$. Осмысленно сокращать время работы, так как при наличии хорошего финального алгоритма, или при использовании итеративной схемы кластеризации основных групп графа, время работы начальных алгоритмом очень критично, в то время как увеличение модулярности начальных алгоритмов на небольшие значения может не принести большой выгоды глобально. Стоит отметить, что на графах, у которых существует ярко выраженная оптимальная точка $k$, увеличение $\beta$ не сильно повлияет на модулярность, но зато и не будет влиять на время работы. На графах, у которых с увеличением $k$ растёт модулярность, увеличение $\beta$ снижает модулярность и время работы.
 
-Рисунок \ref{fig:es-beta1} был получен при применении \emph{ACGGC} с параметрами $d = 2,\ f(Q, k) = -1000(\ln Q - \beta \ln k),\ \hat{k}_0 = 5,\ l = 6,\ r = 0.05$.
-
 \newpage~\vspace{-3cm}\\~
 \begin{vwcol}[widths={0.99, 0.01}, rule=0pt]
 \begin{figure}[H]
 	\begin{tikzpicture}
 		\begin{semilogxaxis}[
 		    table/col sep = semicolon,
-		    height = 0.16\paperheight,
+		    height = 0.15\paperheight,
 		    width = 0.47\columnwidth,
 		    xlabel = {$\beta$},
 		    ylabel = {$Q$},
@@ -564,7 +563,7 @@
 	\begin{tikzpicture}
 		\begin{semilogxaxis}[
 		    table/col sep = semicolon,
-		    height = 0.16\paperheight,
+		    height = 0.15\paperheight,
 		    width = 0.47\columnwidth,
 		    xlabel = {$\beta$},
 		    ylabel = {$t$},
@@ -578,7 +577,7 @@
 	\begin{tikzpicture}
 		\begin{semilogxaxis}[
 		    table/col sep = semicolon,
-		    height = 0.16\paperheight,
+		    height = 0.15\paperheight,
 		    width = 0.47\columnwidth,
 		    xlabel = {$\beta$},
 		    ylabel = {$Q$},
@@ -597,7 +596,7 @@
 	\begin{tikzpicture}
 		\begin{semilogxaxis}[
 		    table/col sep = semicolon,
-		    height = 0.16\paperheight,
+		    height = 0.15\paperheight,
 		    width = 0.47\columnwidth,
 		    xlabel = {$\beta$},
 		    ylabel = {$t$},
@@ -611,7 +610,7 @@
 	\begin{tikzpicture}
 		\begin{semilogxaxis}[
 		    table/col sep = semicolon,
-		    height = 0.16\paperheight,
+		    height = 0.15\paperheight,
 		    width = 0.47\columnwidth,
 		    xlabel = {$\beta$},
 		    ylabel = {$Q$},
@@ -630,7 +629,7 @@
 	\begin{tikzpicture}
 		\begin{semilogxaxis}[
 		    table/col sep = semicolon,
-		    height = 0.16\paperheight,
+		    height = 0.15\paperheight,
 		    width = 0.47\columnwidth,
 		    xlabel = {$\beta$},
 		    ylabel = {$t$},
@@ -644,7 +643,7 @@
 	\begin{tikzpicture}
 		\begin{semilogxaxis}[
 		    table/col sep = semicolon,
-		    height = 0.16\paperheight,
+		    height = 0.15\paperheight,
 		    width = 0.47\columnwidth,
 		    xlabel = {$\beta$},
 		    ylabel = {$Q$},
@@ -663,7 +662,7 @@
 	\begin{tikzpicture}
 		\begin{semilogxaxis}[
 		    table/col sep = semicolon,
-		    height = 0.16\paperheight,
+		    height = 0.15\paperheight,
 		    width = 0.47\columnwidth,
 		    xlabel = {$\beta$},
 		    ylabel = {$t$},
@@ -680,11 +679,13 @@
 ~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\
 \end{vwcol}
 
+Рисунок \ref{fig:es-beta1} был получен при применении \emph{ACGGC} с параметрами $d = 2,\ f(Q, k) = -1000(\ln Q - \beta \ln k),\ \hat{k}_0 = 5,\ l = 6,\ r = 0.05$.
+
 Видно, что на графах \emph{\celegans}, \emph{jazz} и \emph{as-22july06} увеличение $\beta$ довольно сильно влияло на время работы, при этом на графе \emph{\celegans} модулярность росла, на графе \emph{jazz} оставалась неизменной и лишь после некоторого переломного $\beta$ начинала падать в среднем, но сравнительно слабо. На графах \emph{as-22july06} и \emph{netscience} модулярность вела себя непредсказуемо, но принимала небольшой промежуток значений.
 
 Другим подходом к ограничению времени является установка максимального возможного значения $k_n^{+}$ и $\hat{k}_n$ (как $k_n^{-}$ и $\hat{k}_n$ ограничены снизу единицей). Далее в работе ограничение сверху обозначается $k_{max} > 1 \in \mathbb{N}$.
 
-Тогда шаг \ref{item:es-k+} в описании схемы \emph{ACGGC} в подразделе \ref{subsec:es-adaptive} преобразуется следующим образом: $k_n^{-} = \max\{1, \hat{k}_{n - 1} - d\},\ k_n^{+} = \min \{k_{max}, \hat{k}_{n + 1} + d\}$, а формула вычисления следующей центральной точки \eqref{eq:aes-centre} заменится следующей формулой:
+Тогда шаг \ref{item:es-k+} в описании схемы \emph{ACGGC} в подразделе \ref{subsec:es-adaptive} преобразуется следующим образом: $k_n^{-} = \max\{1, \hat{k}_{n - 1} - d\},\ k_n^{+} = \min \{k_{max}, \hat{k}_{n + 1} + d\}$, а формула вычисления следующей оценки \eqref{eq:aes-centre} заменится следующей формулой:
 \begin{equation}
 	\hat{k}_n = \max \left\{1,\ \min \left\{k_{max},\ \left[\hat{k}_{n - 1} - \frac{y_n^{+} - y_n^{-}}{k_n^{+} - k_n^{-}}\right] \right\} \right\}
 \end{equation}
