--- a/Text/sections/section3.II.tex
+++ b/Text/sections/section3.II.tex
@@ -101,7 +101,7 @@
 \begin{figure}[H]
 	\begin{tikzpicture}
 		\tikzset{
-			%every pin/.style={fill=yellow!50!white,rectangle,rounded corners=3pt,font=\normalsize},
+			% every pin/.style={fill=yellow!50!white,rectangle,rounded corners=3pt,font=\normalsize},
 			every pin/.style={fill=black!5!white,rectangle,rounded corners=3pt,font=\normalsize},
 			small dot/.style={fill=black,circle,scale=0.3}
 		}
@@ -119,7 +119,7 @@
 		\node[small dot,pin=-90:{начало работы $CGGCi$}] at (axis description cs:0.708,0.905) {};
 		\end{axis}
 	\end{tikzpicture}
-	\caption{Модулярности промежуточных разбиений в работе \emph{ACGGCi} с \emph{CGGCi} в качестве финального алгоритма на графе \emph{\celegans}, $i$ --- номер итерации, синяя линия --- промежутночные разбиения адаптивной версии, красная обозначает промежуточные разбиения неадаптивной версии}
+	\caption{Модулярности промежуточных разбиений в работе \emph{ACGGCi} с \emph{CGGCi} в качестве финального алгоритма на графе \emph{\celegans}, $i$ --- номер итерации, сплошная линия --- промежутночные разбиения адаптивной версии, прерывистая обозначает промежуточные разбиения неадаптивной версии}
 	\label{fig:es-final}
 \end{figure}
 
@@ -128,7 +128,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Сравнение}
+\subsection{Сравнение ACGGC и CGGC}
 \label{subsec:acggc-res}
 
 На таблицах \ref{tab:es-res-q} и \ref{tab:es-res-t} обозначены результаты работы пяти алгоритмов:
