--- a/Text/sections/section4.tex
+++ b/Text/sections/section4.tex
@@ -1,11 +1,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section*{Заключение}
+\addcontentsline{toc}{section}{Заключение}
 
-Были проанализированы современные методы выделения сообществ в графах и создано две модификации рандомизированных алгоритмов выделения сообществ в графах с помощью одновременно возмущаемой стохастической аппроксимации: адаптивный рандомизированный жадный алгоритм, описанный в разделе \ref{sec:ARG}, а также адаптивная схема кластеризации основных групп графа, описанная в разделе \ref{sec:ACGGC}. Для каждого алгоритма приведён анализ его параметров и результатов.
+В работе были проанализированы современные методы выделения сообществ в графах и предложено две новые модификации рандомизированных алгоритмов выделения сообществ в графах с помощью одновременно возмущаемой стохастической аппроксимации: адаптивный рандомизированный жадный алгоритм, описанный в разделе \ref{sec:ARG}, а также адаптивная схема кластеризации основных групп графа, описанная в разделе \ref{sec:ACGGC}. Для каждого алгоритма проведён анализ его параметров и сравнение результатов с неадаптивными версиями алгоритмов.
 
 При этом адаптивный рандомизированный жадный алгоритм показал более стабильные результаты, чем его неадаптивный вариант (подраздел \ref{subsec:arg-res}), что может в том числе иметь применение, описанное в подразделе \ref{subsec:arg_in_cggc}.
 
 Адаптивная схема кластеризации основных групп графа показала в среднем лучшие и более стабильные результаты, чем неадаптивная схема (подраздел \ref{subsec:acggc-res}). Также адаптивная схема имеет эффективный механизм снижения времени работы, описанный в подразделе \ref{subsec:acggc_time}.
-
-В дальнейшних исследованиях области имеет смысл рассмотреть поведение параметров алгоритмов на больших графах, а так же использовать изменяющиеся со временем параметры, к примеру в итеративной адаптивной схеме кластеризации основных групп графа.
