--- a/Text/sections/section0.tex
+++ b/Text/sections/section0.tex
@@ -1,11 +1,14 @@
 \section*{Введение}
+\addcontentsline{toc}{section}{Введение}
 
-Исторически, изучение сетей происходило в рамках теории графов, которая начала своё существование с решения Леонардом Эйлером задачи о кёнигсбергских мостах. В 1920-х взял своё начало анализ социальных сетей и лишь последние двадцать лет развивается изучение \emph{сложных сетей}, то есть сетей с неправильной, сложной структурой, в некоторых случаях рассматривают динамически меняющейся во времени сложные сети. От изучения маленьких сетей внимание переходит к сетям из тысяч или миллионов узлов.
+Исторически изучение сетей происходило в рамках теории графов, которая начала своё существование с решения Леонардом Эйлером задачи о кёнигсбергских мостах~\cite{Euler:1741}. В 1920-х взял своё начало анализ социальных сетей \cite{Weber:1978}. От изучения маленьких сетей внимание переходило к сетям из тысяч или миллионов узлов, развивались методы статистического анализа сетей. К примеру, теория массового обслуживания \cite{Erlang:1917}, рассматривающая в том числе сети запросов к телефонным станциям, использовала для описания потоков запросов распределение Пуассона.
 
-В процессе изучения сложных систем, построенных по реальным системам, оказалось, что распределение степеней $P(s)$, определённое как доля узлов со степенью $s$ среди всех узлов графа, сильно отличается от распределения Пуассона, которое ожидается для случайных графов. Также сети, построенные по реальным системам характеризуются короткими путями между любыми двумя узлами и большим количеством маленьких циклов \cite{Boccaletti&al:2006}. Это показывает, что модели, предложенные теорией графов, не всегда будут хорошо работать для графов, построенных по реальным системам.
+Лишь последние двадцать лет развивается изучение \emph{сложных сетей}, то есть сетей с неправильной, сложной структурой, в некоторых случаях рассматривают динамически меняющиеся сложные сети. Сложные сети с успехом были применены в таких разных областях, как эпидемиология \cite{Moore&Newman:2000}, биоинформатика \cite{Zhao&al:2006}, поиск преступников \cite{Hong&al:2009}, социология \cite{Scott:2012}, изучение структуры и топологии интернета \cite{Faloutsos&al:1999, Broder&al:2000} и в многих других.
 
-Современное изучение сложных сетей привнесло значительный вклад в понимание реальных систем. Сложные сети с успехом были применены в таких разных областях, как эпидемиология \cite{Moore&Newman:2000}, биоинформатика \cite{Zhao&al:2006}, поиск преступников \cite{Hong&al:2009}, социология \cite{Scott:2012}, изучение структуры и топологии интернета \cite{Faloutsos&al:1999, Broder&al:2000} и в многих других.
+Типичной характеристикой узла сети является его \emph{степень}, определяемая как количество рёбер, выходящих из узла. В процессе изучения сложных сетей, построенных по реальным системам \cite{Moore&Newman:2000, Zhao&al:2006, Hong&al:2009, Scott:2012, Faloutsos&al:1999, Broder&al:2000}, оказалось, что распределение степеней $P(s)$, определённое как доля узлов со степенью $s$ среди всех узлов графа, сильно отличается от распределения Пуассона, которое ожидается для случайных графов. Также сети, построенные по реальным системам характеризуются короткими путями между любыми двумя узлами и большим количеством маленьких циклов \cite{Boccaletti&al:2006}. Это показывает, что модели, предложенные теорией графов, не всегда будут хорошо работать для графов, построенных по указанным выше реальным системам.
 
-Свойством, присутствуещим почти у любой сети, является структура \emph{сообществ}, разделение узлов сети на разные группы узлов так, чтобы внутри каждой группы соединений между узлами много, а соединений между узлами разных групп мало. Плотно связанные группы узлов в социальных сетях представляют людей, принадлежащих социальным сообществам, плотно сплочённые группы узлов в интернете соответствуют страницам, посвящённым распространённым темам, а сообщества в генетических сетях связаны с функциональными модулями \cite{Boccaletti&al:2006}. Способность находить и анализировать подобные группы предоставляет большие возможности в изучении реальных систем, представленных с помощью сложных сетей.
+Общее свойство для рассматриваемых в \cite{Moore&Newman:2000, Zhao&al:2006, Hong&al:2009, Scott:2012, Faloutsos&al:1999, Broder&al:2000} сетей является наличие \emph{сообществ}. Под сообществами можно понимать такие группы узлов графа, что внутри каждой группы соединений между узлами  много, а соединений между узлами разных групп мало. Например, тесно связанные группы узлов в социальных сетях представляют людей, принадлежащих социальным сообществам, плотно сплочённые группы узлов в интернете соответствуют страницам, посвящённым распространённым темам \cite{Boccaletti&al:2006}. Сообщества в сетях, описывающих взаимодействия между генами, связаны с функциональными модулями \cite{Dejori&al:2004}. Способность находить и анализировать подобные группы узлов предоставляет большие возможности в изучении реальных систем, представленных с помощью сложных сетей. Поиск подобных групп узлов называют \emph{выделением сообществ} в графах, или \emph{кластеризацией}.
 
-В разделе \ref{sec:intro} будут рассмотрены существующие методы выделения сообществ в графах, а так же другая необходимая информация о графах и сложных сетях. Так же в разделе будет кратко описана одновременно возмущаемая стохастическая аппроксимация, а в подразделе \ref{subsec:task} будет поставлена задача. Затем в разделе \ref{sec:ARG} будет представлен адаптивный рандомизированный жадный алгоритм, его анализ и сравнение с существующими алгоритмами, возможное применение в подразделе \ref{subsec:arg_in_cggc}. В разделе \ref{sec:ACGGC} будет представлена адаптивная схема кластеризации основных групп графа, анализ и сравнение с существующими алгоритмами.
+В \cite{Ovelgoenne&Geyer-Schulz:2010} был предложен рандомизированный жадный алгоритм выделения сообществ на графах, а в \cite{Ovelgoenne&Geyer-Schulz:2012b} была представлена схема кластеризации основных групп графа. От выбора параметров этих алгоритмов выделения сообществ критически зависит качество их работы, и остаётся открытым вопрос об адаптивных версиях алгоритмов, которые были бы работоспособны на большем количестве задач. В выпускной квалификационной работе предлагаются новые версии алгоритмов, который этот вопрос в некоторой степени решают. Так же предложенные алгоритмы лучше решают проблему меняющегося во времени работы оптимального параметра.
+
+Работа устроена следующим образом: в разделе \ref{sec:intro} рассмотрена необходимая информация о графах и сложных сетях, существующие методы выделения сообществ и одновременно возмущаемая стохастическая аппроксимация. Затем в разделе \ref{sec:ARG} представлен адаптивный рандомизированный жадный алгоритм, его анализ и сравнение с рандомизированным жадным алгоритмом. В разделе \ref{sec:ACGGC} предложена адаптивная схема кластеризации основных групп графа, рассмотрены её параметры и результаты сопоставлены с результатами неадаптивной схемы кластеризации основных групп графа.
