--- a/Text/sections/section2.II.tex
+++ b/Text/sections/section2.II.tex
@@ -2,7 +2,7 @@
 
 \subsection{Размер возмущения}
 
-Коэффициент $d$ отвечает за то, насколько сильно будет возмущаться центральная точка для получения следующих измерений. То есть, насколько $k_n^{+}$ и $k_n^{-}$ будут отличаться от $\hat{k}_{n - 1}$. На рисунке \ref{fig:arg-d} можно увидеть зависимость модулярности от размера возмущения при $f(\mu, k) = -10 \ln \mu,\ \sigma = 500,\ \hat{k}_0 = 10$.
+Коэффициент $d$ отвечает за то, насколько сильно будет возмущаться текущая оценка для получения следующих аргументов функционала. То есть, насколько $k_n^{+}$ и $k_n^{-}$ будут отличаться от $\hat{k}_{n - 1}$. На рисунке \ref{fig:arg-d} можно увидеть зависимость модулярности от размера возмущения при $f(\mu, k) = -10 \ln \mu,\ \sigma = 500,\ \hat{k}_0 = 10$.
 
 На графах \emph{cnr-2000} и \emph{eu-2005} значения модулярности не очень сильно менялись в зависимости от параметра $d$, хотя некоторые значения $d$ и давали более большие значения. Однако на графах \emph{cond-mat-2003} и \emph{caidaRouterLevel} после некоторого порогового значения возмущения модулярность показывала, что получившееся разбиение не лучше случайного.
 
@@ -93,7 +93,7 @@
 	\begin{tikzpicture}
 		\begin{axis}[
 		    table/col sep = semicolon,
-		    height = 0.16\paperheight, 
+		    height = 0.17\paperheight, 
 		    width = 0.32\columnwidth,
 		    xlabel = {$\sigma$},
 		    ylabel = {$Q$},
@@ -109,7 +109,7 @@
 	\begin{tikzpicture}
 		\begin{axis}[
 		    table/col sep = semicolon,
-		    height = 0.16\paperheight, 
+		    height = 0.17\paperheight, 
 		    width = 0.32\columnwidth,
 		    xlabel = {$\sigma$},
 		    legend pos = south east,
@@ -124,7 +124,7 @@
 	\begin{tikzpicture}
 		\begin{axis}[
 		    table/col sep = semicolon,
-		    height = 0.16\paperheight, 
+		    height = 0.17\paperheight, 
 		    width = 0.32\columnwidth,
 		    xlabel = {$\sigma$},
 		    legend pos = south east,
@@ -139,15 +139,15 @@
 	\end{tikzpicture}
 	\caption{Зависимость модулярности от значения $\sigma$ на трёх графах. $\sigma$ принимает значения от 50 до 1400}
 \end{figure}
-
+\newpage
 На всех трёх графах модулярность несильно, но непредсказуемо меняется при изменении $\sigma$. Во всех случаях есть хорошие и плохие значения $\sigma$, но в целом значения параметра достаточно равнозначны.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Начальная центральная точка}
+\subsection{Начальное приближение}
 
-Начальная центральная точка указывает, от какой точки будут строиться $k_1^{-}$ и $k_1^{+}$, с которыми будут проходить первые и вторые $\sigma$ итераций, соответственно. Зависимость модулярности от начальной центральной точки $\hat{k}_0$ при $d = 5,\ f(\mu, k) = -10 \ln \mu,\ \sigma = 1000$ будет выглядеть следующим образом:
+Начальное приближение указывает, от какой точки будут строиться $k_1^{-}$ и $k_1^{+}$, с которыми будут проходить первые и вторые $\sigma$ итераций, соответственно. Зависимость модулярности от начального приближения $\hat{k}_0$ при $d = 5,\ f(\mu, k) = -10 \ln \mu,\ \sigma = 1000$ будет выглядеть следующим образом:
 
 \begin{figure}[H]
 	\begin{tikzpicture}
@@ -208,7 +208,7 @@
 
 \subsection{Коэффициент $\beta$ функции качества}
 
-Коэффициент $\beta$ функции качества \eqref{eq:arg-f} указывает на то, насколько много внимания алгоритм обращает на величину точек $k^{-}_n$ и $k^{+}_n$ при выборе следующей центральной точки. Предполагалось, что чем больше $\beta$, тем быстрее будет работать алгоритм, однако возможно будет находить более плохие разбиения. На рисунке \ref{fig:arg-beta} изображены результаты работы $ARG$ с параметрами $d = 5,\ \sigma = 1000,\ \hat{k}_0 = 8$, функция качества $f(\mu, k) = -10(\ln \mu - \beta \ln k)$ с разными значениями $\beta$ на графе \emph{cond-mat-2003}.
+Коэффициент $\beta$ функции качества \eqref{eq:arg-f} указывает на то, насколько много внимания алгоритм обращает на величину точек $k^{-}_n$ и $k^{+}_n$ при выборе следующей оценки. Предполагалось, что чем больше $\beta$, тем быстрее будет работать алгоритм, однако возможно будет находить более плохие разбиения. На рисунке \ref{fig:arg-beta} изображены результаты работы $ARG$ с параметрами $d = 5,\ \sigma = 1000,\ \hat{k}_0 = 8$, функция качества $f(\mu, k) = -10(\ln \mu - \beta \ln k)$ с разными значениями $\beta$ на графе \emph{cond-mat-2003}.
 
 Время работы сначала увеличивается на небольших значениях параметра $\beta$, а затем постепенно падает, в то время как модулярность при уменьшении $\beta$ сначала постепенно падает, но после некоторого переломного значения $\beta$ сильно падает.
 
@@ -240,7 +240,7 @@
 		    x tick label style = {align = center, rotate = 20, anchor = north east},
 		    cycle list name = diploma list,
 		]
-		\addplot[red] table [x={beta}, y={time}]{data/arg/beta/cond_beta.csv};
+		\addplot table [x={beta}, y={time}]{data/arg/beta/cond_beta.csv};
 		\end{axis}
 	\end{tikzpicture}
 	\caption{Зависимость модулярности и времени от параметра функции качества $\beta$ на графе \emph{cond-mat-2003}}
@@ -250,7 +250,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Сравнение}
+\subsection{Сравнение ARG и RG}
 \label{subsec:arg-res}
 
 На таблицах \ref{tab:arg-res-q} и \ref{tab:arg-res-t} показано сравнение результатов работы рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма. В качестве входных данных для рассмотрения выбраны 7 тестовых графов.
